--- a/README.textile
+++ b/README.textile
@@ -1,13 +1,10 @@
 h1. PaperclipPolymorph
 
-This plugin allows users of the Paperclip plugin to easily share attached files between 
-multiple models. Essentially, polymorphic paperclip transparently saves the attached files
-into a separate asset's table and associates the the model to the asset through a polymorphic
-_attachings_ table.
+This plugin allows users of the Paperclip plugin to easily share attached files between multiple models. Essentially, polymorphic paperclip transparently saves the attached files into a separate asset's table and associates the the model to the asset through a polymorphic_attachings_ table.
 
-The Paperclip Plugin must also be installed for PolyMorphicPaperclip to work.
-Get paperclip here:
-http://thoughtbot.com/projects/paperclip
+This fork treats the attaching as a list. It also assumes your project has the "acts_as_list":http://github.com/toy/acts_as_list plugin installed.
+
+The Paperclip Plugin must also be installed for PolyMorphicPaperclip to work. Get paperclip here: "http://thoughtbot.com/projects/paperclip":http://thoughtbot.com/projects/paperclip
 
 h3. Example
 
@@ -30,6 +27,6 @@ h4. Helper methods
 
 There is one helper method so far used to determine if the asset can be displayed in a browser
 <pre>
-@essay.assets.first.browser_safe? # => returns true or false
+  @essay.assets.first.browser_safe? # => returns true or false
 </pre>
 Copyright (c) 2008 PolymorphicPaperclip Mark Daggett, released under the MIT license
